trying to fix spacing of links in navbar; running into css interference

--- a/src/index.css
+++ b/src/index.css
@@ -348,6 +348,7 @@ nav {
     background: transparent;
   }
   .social-icons-nav {
+    font-size: 1.5rem;
     display: flex;
   }
   .social-icons-nav a {
